tests/rosetta/out/Smalltalk/count-occurrences-of-a-substring.out
/tmp/count-occurrences-of-a-substring.st:10: parse error, expected ']'
