tests/rosetta/out/Smalltalk/count-occurrences-of-a-substring.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| countOccurrences cnt i step main |
countOccurrences := [:s :sub | ((((sub size)) = 0)) ifTrue: [
(((s size)) + 1).
] .
cnt := 0.
i := 0.
step := (sub size).
[(((i + step)) <= ((s size)))] whileTrue: [.
((((s copyFrom: i to: (i + step))) = sub)) ifTrue: [
cnt := (cnt + 1).
i := (i + step).
] ifFalse: [
i := (i + 1).
].
].
.
cnt. ].
main := [ Transcript show: ((countOccurrences value: 'the three truths' value: 'th' asString)) printString; cr.
Transcript show: ((countOccurrences value: 'ababababab' value: 'abab' asString)) printString; cr. ].
main value.
